--- a/html/fixed-test.html
+++ b/html/fixed-test.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="renderer" content="webkit" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover" />
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="black" name="apple-mobile-web-app-status-bar-style" />
   <meta name="author" content="ntnyq, 1210485244@qq.com" />
@@ -20,6 +22,7 @@
       background-color: #1b1b1b;
       overflow: hidden;
     }
+
     .box {
       width: 200px;
       height: 200px;
@@ -44,10 +47,6 @@
       transform: rotate(0);
     }
 
-    .box5 {
-
-    }
-
     .box-inner {
       position: fixed;
       top: 20px;
@@ -63,6 +62,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="box box1">
     <div class="box-inner">1</div>
@@ -80,4 +80,5 @@
     <div class="box-inner">5</div>
   </div>
 </body>
+
 </html>
