--- a/src/vue/webpack-vue/public/index.html
+++ b/src/vue/webpack-vue/public/index.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MutationObserver Demo</title>
+  <title>Document</title>
 </head>
 
 <body>
-
-  <script src="./index.js"></script>
+  <div id="app"></div>
 </body>
 
 </html>
