feat: demo js-zip

--- a/src/canvas/fireworks.html
+++ b/src/canvas/fireworks.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>HTML5烟花效果</title>
+  <title>HTML5锟教伙拷效锟斤拷</title>
   <style>
     body {
       background: #000;
