--- a/src/svg/stroke-text/index.html
+++ b/src/svg/stroke-text/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="renderer" content="webkit" />
@@ -12,10 +13,11 @@
   <title>SVG动画</title>
   <link rel="stylesheet" href="./src/css/style.css" />
 </head>
+
 <body>
   <svg version="1.1" viewBox="0 0 1000 600" xmlns="http://www.w3.org/2000/svg">
     <symbol id="text">
-      <text class="text" x="0" y="35%">NTNYQ</text>
+      <text class="text" x="0" y="35%">测试文字</text>
     </symbol>
     <g>
       <use xlink:href="#text" class="use-text"></use>
@@ -26,4 +28,5 @@
     </g>
   </svg>
 </body>
+
 </html>
