--- a/src/javascript/feature/define-property/index.html
+++ b/src/javascript/feature/define-property/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="renderer" content="webkit" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta name="author" content="ntnyq<1210485244@qq.com>" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="renderer" content="webkit" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-  <meta name="author" content="ntnyq<1210485244@qq.com>" />
-  <title>Document</title>
-</head>
-
-<body>
-  <div class="container">
-    <h2>Object.defineProperty实现数据和视图的联动</h2>
-    <span id="nickName"></span>
-    <div id="introduce"></div>
-  </div>
-  <script>
-    class Event {
-      constructor() {
-        this.subs = [];
-      }
-
-      addSubscriber(k, callback) {
-        if (!this.subs[k]) {
-          this.subs[k] = [];
+  <body>
+    <div class="container">
+      <h2>Object.defineProperty实现数据和视图的联动</h2>
+      <span id="nickName"></span>
+      <div id="introduce"></div>
+    </div>
+    <script>
+      class Event {
+        constructor() {
+          this.subs = []
         }
-        this.subs[k].push(callback);
-      }
 
-      publish(k, item) {
-        const fns = this.subs[k];
+        addSubscriber(k, callback) {
+          if (!this.subs[k]) {
+            this.subs[k] = []
+          }
+          this.subs[k].push(callback)
+        }
 
-        if (fns) { // 防止发布不存在的对象
-          for (var i = 0; i < fns.length; i++) {
-            fns[i](item);
+        publish(k, item) {
+          const fns = this.subs[k]
+
+          if (fns) {
+            // 防止发布不存在的对象
+            for (var i = 0; i < fns.length; i++) {
+              fns[i](item)
+            }
           }
         }
       }
-    }
 
-    const reader = item => {
-      console.log(item);
-      console.log('我是收听的');
-    };
+      const reader = item => {
+        console.log(item)
+        console.log('我是收听的')
+      }
 
-    var event = new Event();
+      var event = new Event()
 
-    event.addSubscriber('a', reader);
-    event.addSubscriber('b', reader);
+      event.addSubscriber('a', reader)
+      event.addSubscriber('b', reader)
 
-    event.publish('a', 'publish发表信息');
-    event.publish('b', 'publish发表信息');
+      event.publish('a', 'publish发表信息')
+      event.publish('b', 'publish发表信息')
 
-    /*    // 观察者对象
+      /*    // 观察者对象
         var observer = {
 
           addSubscriber: function (callback) { // 添加订阅者
@@ -114,51 +114,50 @@
         //           blogger也可以添加任意的函数为订阅者
         //           jack也可以订阅别的发布者*/
 
-    // Function.prototype.fn = function (fn) {
-    //   var self = this;
-    //   return function () {
-    //     self.apply(this, arguments);
-    //     fn.apply(this, arguments);
-    //   };
-    // };
+      // Function.prototype.fn = function (fn) {
+      //   var self = this;
+      //   return function () {
+      //     self.apply(this, arguments);
+      //     fn.apply(this, arguments);
+      //   };
+      // };
 
-    // function foo () {
-    //   console.log('我是函数foo');
-    // }
+      // function foo () {
+      //   console.log('我是函数foo');
+      // }
 
-    // var copyFoo = foo.fn(function () {
-    //   console.log('我是a函数的额外功能');
-    // });
+      // var copyFoo = foo.fn(function () {
+      //   console.log('我是a函数的额外功能');
+      // });
 
-    // copyFoo();
+      // copyFoo();
 
-    // var methods = ['push', 'pop', 'shift', 'unshift', 'splice', 'slice', 'sort', 'reverse'];
+      // var methods = ['push', 'pop', 'shift', 'unshift', 'splice', 'slice', 'sort', 'reverse'];
 
-    // var Method = {};
+      // var Method = {};
 
-    // for (var i = 0, len = methods.length; i < len; i++) {
-    //   var method = methods[i];
+      // for (var i = 0, len = methods.length; i < len; i++) {
+      //   var method = methods[i];
 
-    //   (function (method) {
+      //   (function (method) {
 
-    //     var original = Array.prototype[method];
+      //     var original = Array.prototype[method];
 
-    //     Method[method] = function () {
-    //       console.log('监听数组的变化或者操作函数等');
-    //       return original.apply(this, arguments);
-    //     };
+      //     Method[method] = function () {
+      //       console.log('监听数组的变化或者操作函数等');
+      //       return original.apply(this, arguments);
+      //     };
 
-    //   })(method);
-    // }
+      //   })(method);
+      // }
 
-    // var list = ['a', 'b', 'c'];
+      // var list = ['a', 'b', 'c'];
 
-    // list.__proto__ = Method;
+      // list.__proto__ = Method;
 
-    // list.push('d');
+      // list.push('d');
 
-
-    /*    var userInfo = {};
+      /*    var userInfo = {};
 
         Object.defineProperty(userInfo, 'nickName', {
           get: function () {
@@ -181,25 +180,25 @@
         userInfo.nickName = '那天你远去';
         userInfo.introduce = '你好世界，我是前端菜鸟。';
     */
-    // let a = {};
+      // let a = {};
 
-    // Object.defineProperty(a, 'b', {
+      // Object.defineProperty(a, 'b', {
 
-    //   set (newValue) {
-    //     console.log(`设置了新值：${newValue}`);
-    //   },
+      //   set (newValue) {
+      //     console.log(`设置了新值：${newValue}`);
+      //   },
 
-    //   get () {
-    //     console.log('取值');
-    //     return 2;
-    //   }
-    // });
+      //   get () {
+      //     console.log('取值');
+      //     return 2;
+      //   }
+      // });
 
-    // a.b = 'liusen';
+      // a.b = 'liusen';
 
-    // console.log(a.b)
+      // console.log(a.b)
 
-    /*    // 判断是否为对象
+      /*    // 判断是否为对象
         const isObj = obj => {
           var type = Object.prototype.toString.call(obj);
           return type === '[object Object]';
@@ -253,7 +252,6 @@
 
         console.log(obj.name)
         console.log(obj.age)*/
-  </script>
-</body>
-
+    </script>
+  </body>
 </html>
